# oai-proxy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json
.context/compound-engineering/todos/: 001-complete-p2-admin-requests-pagination-nav.md
docs/brainstorms/: first-token-failover-proxy-requirements.md
docs/plans/: 2026-07-13-001-feat-rust-htmx-proxy-plan.md
migrations/: 0001_initial.sql  0002_drop_proxy_keys.sql  0003_drop_upstream_api_key.sql  0004_remove_max_body_bytes_setting.sql  0005_request_payloads.sql  0006_rebalance_default_timeouts.sql  0007_enable_policy_by_default.sql
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  recording.rs  runtime.rs
src/admin/: auth.rs  handlers.rs
src/observability/: metrics.rs
src/proxy/: attempt.rs  body.rs  direct.rs  headers.rs  mod.rs  routes.rs  semantic_token.rs  sse.rs  upstream.rs
src/storage/: mod.rs  proxy_keys.rs  records.rs  settings.rs  upstreams.rs
static/: app.css
templates/: dashboard.html  layout.html  login.html  requests.html  settings.html  upstreams.html
templates/partials/: requests_table.html
tests/: admin_routes.rs  first_token_failover.rs  health_routes.rs  metrics_routes.rs  migrations.rs  proxy_forwarding.rs  sse_semantic_token.rs  storage_records.rs  storage_settings.rs
